--- a/mysql-effect.cabal
+++ b/mysql-effect.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                mysql-effect
-version:             0.1.0.1
+version:             0.2.0.1
 synopsis:            An extensible mysql effect using extensible-effects and mysql-simple
 description:         Any help (especially documentation) is very welcome,
 homepage:            https://github.com/ibotty/mysql-effect
@@ -26,3 +26,8 @@ library
                      , mysql-simple >=0.2 && <0.3
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+source-repository head
+  type: git
+  location: https://github.com/ibotty/mysql-effect
+
